filter pipe now applied in dashboard component (parent of filters and students). Students passed by value in events

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -17,6 +17,6 @@
         <div class="mb-5">
             <app-filters (treeEmitter)="onTreeEmitter($event)"></app-filters>
         </div>
-        <app-table [students]="students" [filters]="filters"></app-table>
+        <app-table (onStudentsUpdate)="onStudentsUpdate($event)" [students]="students | filter: filters"></app-table>
     </section>
 </div>
