bugfix - filters not working because of getChldren returning more than it should

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -17,6 +17,10 @@
         <div class="mb-5">
             <app-filters (treeEmitter)="onTreeEmitter($event)"></app-filters>
         </div>
-        <app-table (onStudentsUpdate)="onStudentsUpdate($event)" [students]="students | filter: filters"></app-table>
+        <app-table 
+            (onStudentUpdate)="onStudentUpdate($event)" 
+            (onStudentDelete)="onStudentDelete($event)"
+            [students]="students | filter: filters">
+        </app-table>
     </section>
 </div>
