--- a/angular-front/src/app/components/layout/table/table.component.html
+++ b/angular-front/src/app/components/layout/table/table.component.html
@@ -62,7 +62,7 @@
                         <mat-icon>edit</mat-icon>
                     </button>
                     <button (click)="onDeleteStudent(student.id)" mat-icon-button color="accent">
-                        <mat-icon>delete</mat-icon>
+                        <mat-icon color="accent">delete</mat-icon>
                     </button>
                 </div>
             </td>
