angular material edit button color changed

--- a/angular-front/src/app/components/layout/table/table.component.html
+++ b/angular-front/src/app/components/layout/table/table.component.html
@@ -55,7 +55,7 @@
             <td mat-cell *matCellDef="let student">
                 <div class="d-flex row justify-content-center align-items-center">
                     <button
-                        [style]="{transform: 'scale(0.6)'}" 
+                        class="edit-icon"
                         (click)="onEditStudent(student.id)" 
                         mat-mini-fab color="primary"
                     >
