filters abstracted from type in order to use with courses as well (implemented with composites)

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
             </p>
         </div>
         <div class="mb-5">
-            <app-filters></app-filters>
+            <app-filters [filterableType]="'Student'"></app-filters>
         </div>
         <app-table></app-table>
     </section>
