--- a/angular-front/src/app/pages/layout/layout/layout.component.html
+++ b/angular-front/src/app/pages/layout/layout/layout.component.html
@@ -7,7 +7,12 @@
         <app-menu></app-menu>
         </aside>
         <main>
-        <app-dashboard></app-dashboard>
+        <app-dashboard *ngIf="getDashboardText() as dbText"
+            [title]="dbText.title"
+            [description]="dbText.description"
+            [createDataTitle]="dbText.createDataTitle"
+            [filterableType]="dbText.filterableType"
+        ></app-dashboard>
         </main>
     </div>
 </div>
