--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
             </p>
         </div>
         <div class="mb-5">
-            <app-filters [filterableType]="filterableType"></app-filters>
+            <app-filters [filterableType]="filterableType" [filters]="filterOptions"></app-filters>
         </div>
         <app-table></app-table>
     </section>
