--- a/angular-front/src/app/pages/layout/layout/layout.component.html
+++ b/angular-front/src/app/pages/layout/layout/layout.component.html
@@ -16,6 +16,7 @@
             [description]="dbText.description"
             [createDataTitle]="dbText.createDataTitle"
             [filterableType]="dbText.filterableType"
+            [filterOptions]="dbText.filterOptions"
         ></app-dashboard>
         </main>
     </div>
