edit and create forms appearing according to filterableType

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                 </p>
             </div>
             <p id="add-student-btn-text" [appFontSize]="'medium'" class="text-end">
-                <button mat-raised-button id="add-student-btn" (click)="openAddStudentDialog()">
+                <button mat-raised-button id="add-student-btn" (click)="openDialog()">
                     <mat-icon [appFontSize]="'medium'" class="mr-2">add</mat-icon>
                     {{createDataTitle}}
                 </button>
