requirement: promise and pipe async

--- a/angular-front/src/app/components/layout/add-course-form-component/add-course-form-component/add-course-form.component.html
+++ b/angular-front/src/app/components/layout/add-course-form-component/add-course-form-component/add-course-form.component.html
@@ -16,6 +16,7 @@
                     [appValidInput]="isValidInput('name')" 
                     id="name" 
                     formControlName="name"
+                    placeholder="Nombre del curso"
                 >
             </div>
             <div class="form-group">
@@ -26,6 +27,7 @@
                     [appValidInput]="isValidInput('description')"
                     id="description" 
                     formControlName="description"
+                    placeholder="Descripción del curso"
                 >
             </div>
             <div class="form-group">
@@ -36,6 +38,7 @@
                     [appValidInput]="isValidInput('credits')"
                     id="credits" 
                     formControlName="credits"
+                    placeholder="Créditos del curso"
                 >
             </div>
         </form>
