html and scss variable names from student to filterable-data

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
                     {{description}}
                 </p>
             </div>
-            <p id="add-student-btn-text" [appFontSize]="'medium'" class="text-end">
-                <button mat-raised-button id="add-student-btn" (click)="openDialog()">
+            <p id="add-filterable-data-btn-text" [appFontSize]="'medium'" class="text-end">
+                <button mat-raised-button id="add-filterable-data-btn" (click)="openDialog()">
                     <mat-icon [appFontSize]="'medium'" class="mr-2">add</mat-icon>
                     {{createDataTitle}}
                 </button>
