--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.scss
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.scss
@@ -29,7 +29,7 @@
         flex-grow: 1;
     }
 
-    #add-student-btn {
+    #add-filterable-data-btn {
         background-color: colors.$MAIN_COLOR;
         color: colors.$LIGHT_COLOR;
     }
