course view design skeleton

--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -17,6 +17,6 @@
         <div class="mb-5">
             <app-filters [filterableType]="filterableType" [filters]="filterOptions"></app-filters>
         </div>
-        <app-table></app-table>
+        <app-table (onViewEmiter)="handleViewEmitter($event)"></app-table>
     </section>
 </div>
