--- a/angular-front/src/app/pages/course-dashboard/course-dashboard.component.html
+++ b/angular-front/src/app/pages/course-dashboard/course-dashboard.component.html
@@ -5,5 +5,6 @@
     [createDataTitle]="dbText.createDataTitle"
     [filterableType]="dbText.filterableType"
     [filterOptions]="dbText.filterOptions"
+    (onViewEmitter)="onView($event)"
 >
 </app-dashboard>
