--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -25,8 +25,8 @@ html, body { height: 100%; }
 }
 
 .custom-container {
-    background-color: #fafafa;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+    background-color: colors.$LIGHT_COLOR;
+    box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.75rem 1rem 0.75rem 1rem;
 }
